--- a/src/EasyOcrSharp/EasyOcrSharp.csproj
+++ b/src/EasyOcrSharp/EasyOcrSharp.csproj
@@ -8,10 +8,10 @@
 		<PackageId>EasyOcrSharp</PackageId>
 		<Version>1.0.0</Version>
 		<Authors>Farhan Lodi</Authors>
-		<Description>High-accuracy OCR for .NET powered by EasyOCR (Python), with self-contained runtime using PySharp.</Description>
+		<Description>High-accuracy OCR for .NET powered by EasyOCR (Python), with minimal runtime that downloads pip and PyTorch components automatically for reduced package size while keeping EasyOCR pre-bundled for fast startup.</Description>
 		<PackageTags>OCR;EasyOCR;Python;PySharp;TextRecognition;.NET9</PackageTags>
-		<RepositoryUrl>https://github.com/easyocrsharp/EasyOcrSharp</RepositoryUrl>
-		<PackageProjectUrl>https://github.com/easyocrsharp/EasyOcrSharp</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/FarhanLodi/EasyOcrSharp</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/FarhanLodi/EasyOcrSharp</PackageProjectUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageIcon>icon.png</PackageIcon>
@@ -24,9 +24,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="EasyOcrSharp.Runtime" Version="1.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+		<PackageReference Include="Python.Included" Version="3.11.6" />
 		<PackageReference Include="Python.Runtime" Version="2.7.9" />
 		<PackageReference Include="pythonnet" Version="3.0.5" />
+		<PackageReference Include="System.Management" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
